packages/svelte/tests/validator/samples/script-context-module-runes-deprecated/input.svelte
<svelte:options runes />

<script context="module">
	let num = 2;
</script>
