packages/svelte/tests/compiler-errors/samples/dollar-binding-declaration-runes/main.svelte
<svelte:options runes />

<script>
	let $;
</script>
